--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,65 +2,95 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="27dp"
+    android:layout_marginBottom="70dp"
+    android:layout_marginLeft="48dp"
+    android:layout_marginRight="48dp"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/middlebutton6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
+        android:nextFocusLeft="@id/leftbutton5"
+        android:nextFocusRight="@id/rightbutton7"
+        android:nextFocusUp="@id/middlebutton6"
+        android:nextFocusDown="@id/flagView"
         android:text="@string/Button1"
-        app:layout_constraintEnd_toStartOf="@+id/button6"
+        app:layout_constraintEnd_toStartOf="@+id/leftbutton5"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button6"
+
+
+        android:id="@+id/leftbutton5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_marginStart="32dp"
+        android:nextFocusLeft="@id/leftbutton5"
+        android:nextFocusRight="@id/middlebutton6"
+
+        android:nextFocusUp="@id/leftbutton5"
+        android:nextFocusDown="@id/flagView"
         android:text="@string/Button2"
-        app:layout_constraintEnd_toStartOf="@+id/button7"
+        app:layout_constraintEnd_toStartOf="@+id/rightbutton7"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button5"
-        app:layout_constraintTop_toTopOf="@+id/button5" />
+        app:layout_constraintStart_toEndOf="@+id/middlebutton6"
+        app:layout_constraintTop_toTopOf="@+id/middlebutton6" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/rightbutton7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:nextFocusLeft="@id/middlebutton6"
+        android:nextFocusRight="@id/rightbutton7"
+        android:nextFocusUp="@id/rightbutton7"
+        android:nextFocusDown="@id/flagView"
         android:text="@string/Button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button6"
-        app:layout_constraintTop_toTopOf="@+id/button6" />
+        app:layout_constraintStart_toEndOf="@+id/leftbutton5"
+        app:layout_constraintTop_toTopOf="@+id/leftbutton5" />
 
     <ImageView
         android:id="@+id/flagView"
-        android:layout_width="171dp"
-        android:layout_height="147dp"
+        android:layout_width="152dp"
+        android:layout_height="117dp"
         android:layout_marginTop="32dp"
-        app:layout_constraintStart_toStartOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintStart_toStartOf="@+id/middlebutton6"
+        app:layout_constraintTop_toBottomOf="@+id/middlebutton6"
         app:srcCompat="@drawable/flag" />
 
     <Switch
+
         android:id="@+id/spin_switch"
+
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:nextFocusUp="@id/middlebutton6"
         android:text="@string/spin_message"
         app:layout_constraintBottom_toBottomOf="@+id/flagView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toEndOf="@+id/flagView"
-        app:layout_constraintTop_toTopOf="@+id/flagView" />
+        app:layout_constraintTop_toTopOf="@+id/flagView"
+        app:layout_constraintVertical_bias="0.488" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
