--- a/app/src/main/res/layout/receive_message.xml
+++ b/app/src/main/res/layout/receive_message.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
 
         android:text="Message goes here"
+        android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/imageView3"
         tools:layout_editor_absoluteY="0dp" />
 
@@ -18,7 +19,7 @@
         android:id="@+id/imageView3"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:icon="@drawable/receive_image"
+        app:srcCompat="@drawable/receive_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
