--- a/app/src/main/res/layout/sent_message.xml
+++ b/app/src/main/res/layout/sent_message.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/message"
-
+        android:textSize="24sp"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="Message goes here"
@@ -17,9 +17,9 @@
         android:id="@+id/imageView2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:icon="@drawable/send_image"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/send_image" />
 
     <TextView
         android:id="@+id/time"
