--- a/app/src/main/res/layout/receive_message.xml
+++ b/app/src/main/res/layout/receive_message.xml
@@ -27,7 +27,8 @@
         android:id="@+id/time"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginStart="200dp"
         android:text="Time goes here"
         android:textSize="8sp"
         android:textStyle="bold|italic"
