--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
+
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width = "match_parent"
         app:layout_constraintTop_toTopOf ="parent"
         android:id ="@+id/toolbar"
         android:layout_height="wrap_content"/>
+
+
+<androidx.drawerlayout.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<!-- on screen: -->
+</androidx.drawerlayout.widget.DrawerLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/popout_header"
+        android:menu="@menu/main_activity_actions"
+        android:id="@+id/popout_menu"/>
 
 
     <TextView
@@ -70,6 +89,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Description goes here"
-        android:visibility="invisible"
-        />
+        android:visibility="invisible"/>
+
+
+
 </LinearLayout>
+
+
+
+
+
+<!-- pop out: -->
+
+
+
