--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,78 +19,86 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <!-- on screen: -->
-</androidx.drawerlayout.widget.DrawerLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Type in the name of a city"
+            />
+
+
+        <EditText
+            android:id="@+id/cityTextField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Type city name here"
+            />
+        <Button
+            android:id="@+id/forecastButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Get Forecast"
+            />
+        <TextView
+            android:id="@+id/temp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Temp goes here"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:id="@+id/maxTemp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Max goes here"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:id="@+id/minTemp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Mim goes here"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:id="@+id/humidity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Humidity goes here"
+            android:visibility="invisible"
+            />
+        <ImageView
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:id="@+id/icon"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Description goes here"
+            android:visibility="invisible"/>
+
+
+    </LinearLayout>
+
+    <!-- pop out: -->
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/popout_header"
-        android:menu="@menu/main_activity_actions"
+        app:menu="@menu/main_activity_actions"
         android:id="@+id/popout_menu"/>
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Type in the name of a city"
-        />
-
-
-    <EditText
-        android:id="@+id/cityTextField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Type city name here"
-       />
-    <Button
-        android:id="@+id/forecastButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Get Forecast"
-        />
-    <TextView
-        android:id="@+id/temp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Temp goes here"
-        android:visibility="invisible"
-        />
-    <TextView
-        android:id="@+id/maxTemp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Max goes here"
-        android:visibility="invisible"
-        />
-    <TextView
-        android:id="@+id/minTemp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Mim goes here"
-        android:visibility="invisible"
-        />
-    <TextView
-        android:id="@+id/humidity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Humidity goes here"
-        android:visibility="invisible"
-        />
-    <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:id="@+id/icon"
-        android:visibility="invisible"
-        />
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Description goes here"
-        android:visibility="invisible"/>
-
+</androidx.drawerlayout.widget.DrawerLayout>
 
 
 </LinearLayout>
@@ -99,7 +107,6 @@
 
 
 
-<!-- pop out: -->
 
 
 
